# serializer version: 1
# name: test_binary_sensor_platform[binary_sensor.hostname_camera_in_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hostname_camera_in_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Camera in use',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Camera in use',
    'platform': 'system_bridge',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'camera_in_use',
    'unique_id': 'hostname_camera_in_use',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_platform[binary_sensor.hostname_camera_in_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'hostname Camera in use',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hostname_camera_in_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor_platform[binary_sensor.hostname_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hostname_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Charging',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'system_bridge',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'hostname_battery_is_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_platform[binary_sensor.hostname_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'hostname Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hostname_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor_platform[binary_sensor.hostname_pending_reboot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hostname_pending_reboot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pending reboot',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pending reboot',
    'platform': 'system_bridge',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pending_reboot',
    'unique_id': 'hostname_pending_reboot',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_platform[binary_sensor.hostname_pending_reboot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'hostname Pending reboot',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hostname_pending_reboot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor_platform[binary_sensor.hostname_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hostname_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Update',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.UPDATE: 'update'>,
    'original_icon': None,
    'original_name': 'Update',
    'platform': 'system_bridge',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'hostname_version_available',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_platform[binary_sensor.hostname_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'update',
      'friendly_name': 'hostname Update',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hostname_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
